# ComfyUI-Qwen

./: Qwen.py  README.md  README_CN.md  README_zh.md  __init__.py  pyproject.toml  qwen_model_registry.json  requirements.txt
workflows/: Qwen Workflows.json
